# prime_number_finder

./: .gitignore  CHANGELOG  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  install.py  pyproject.toml  uninstall.py
prime_number_finder/: app.py  config_handler.py  file_handler.py  prime_checker.py
src/prime_number_finder/: app.py  file_handler.py  prime_checker.py  prime_file_handler.py
src/prime_number_finder/resources/: PYPI_README.md
src/prime_number_finder/resources/data/: prime_data.db
