[tool.poetry]
name = "prime-number-finder"
version = "0.1.0"
description = ""
authors = ["Melvin Quick <melvinquick@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt6 = "^6.7.1"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
pyinstaller = "^6.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
